# varivari

./: .gitignore  Cargo.toml  README.md  lib.rs
src/: errors.rs  io.rs  lib.rs  nom.rs
src/types/: varint.rs
