[package]
name = "varivari"
version = "0.1.0"
authors = ["Yuki Hiragino <yuki@shiina.family>"]
edition = "2021"
# rust-version = "1.65.0" # Latest as of writing this file but I think very old versions are fine
description = "A low-level MCMODERN packet field [data type](https://wiki.vg/Protocol#Data_types) decoder/encoder."
# homepage = "https://varivari.yuki.codes" # Unsure if I will make this
repository = "https://github.com/hiraginoyuki/varivari"
license = "MIT"
keywords = ["no_std"]
categories = ["encoding", "no-std"]
publish = false

[dependencies]
