[package]
name = "varivari"
version = "0.1.0"
authors = ["Yuki Hiragino <yuki@shiina.family>"]
edition = "2021"
# rust-version = "1.65.0" # Latest as of writing this file but I think very old versions are fine
description = "A simple MCMODERN VarInt/VarLong decoder/encoder."
# homepage = "https://varivari.yuki.codes" # Unsure if I will make this
repository = "https://github.com/hiraginoyuki/varivari"
license = "MIT"
keywords = ["no_std"]
categories = ["encoding", "no-std"]
publish = false

[features]
default = ["tokio"]
tokio = ["dep:tokio", "dep:async-trait", "std"]
std = []

[dependencies]
async-trait = { version = "~0.1", optional = true }

[dependencies.tokio]
version = "1"
features = ["io-util"]
optional = true
